--- a/index.html
+++ b/index.html
@@ -8,7 +8,31 @@
   <body>
     <div class="container">
       <div class="img-container">
+        <div class="wave">
+              <span class="line1"></span>
+              <span class="line1"></span>
+              <span class="line1"></span>
+              <span class="line1"></span>
+              <span class="line1"></span>
+              <span class="line1"></span>
+              <span class="line1"></span>
+              <span class="line1"></span>
+              <span class="line1"></span>
+              <span class="line1"></span>
+          </div>
         <img id="image" src="">
+          <div class="wave">
+              <span class="line2"></span>
+              <span class="line2"></span>
+              <span class="line2"></span>
+              <span class="line2"></span>
+              <span class="line2"></span>
+              <span class="line2"></span>
+              <span class="line2"></span>
+              <span class="line2"></span>
+              <span class="line2"></span>
+              <span class="line2"></span>
+          </div>
       </div>
     <div class="panels">  
     <div id="img-panel">
@@ -23,7 +47,7 @@
       </div>
       
       <div id="song-panel">
-        <audio id="audio-tag"></audio>
+        <audio id="audio-tag" crossorigin="anonymous"></audio>
         <div class="controls-container">
           <div id="prev-song"><img class="ico arrow" src="static/prevsong.svg"></div>
           <div id="play-pause-song"><img class="ico" src="static/play.svg"></div>
@@ -35,18 +59,6 @@
         <div class="song-author"></div>
         </div>
       </div>
-      <div class="wave">
-            <span class="line"></span>
-            <span class="line"></span>
-            <span class="line"></span>
-            <span class="line"></span>
-            <span class="line"></span>
-            <span class="line"></span>
-            <span class="line"></span>
-            <span class="line"></span>
-            <span class="line"></span>
-            <span class="line"></span>
-        </div>  
     </div>
       <script src="script.js" defer></script>
     </div>
