--- a/index.html
+++ b/index.html
@@ -47,16 +47,21 @@
       </div>
       
       <div id="song-panel">
-        <audio id="audio-tag" crossorigin="anonymous"></audio>
-        <div class="controls-container">
-          <div id="prev-song"><img class="ico arrow" src="static/prevsong.svg"></div>
-          <div id="play-pause-song"><img class="ico" src="static/play.svg"></div>
-          <div id="next-song"><img class="ico arrow" src="static/nextsong.svg"></div>
-        </div>
-        <div class="gap"></div>
-        <div class="song-container">
-        <div class="song-name"></div>
-        <div class="song-author"></div>
+      <input type="range" min="1" max="100" value="0" class="seek-slider" onchange="seekTo(this.value)">
+        <div id="song-panel-cont">
+          <audio id="audio-tag" crossorigin="anonymous"></audio>
+          <div class="controls-container">
+            <div id="prev-song"><img class="ico arrow" src="static/prevsong.svg"></div>
+            <div id="play-pause-song"><img class="ico" src="static/play.svg"></div>
+            <div id="next-song"><img class="ico arrow" src="static/nextsong.svg"></div>
+          </div>
+          <div class="gap"></div>
+          <div class="song-container">
+          <div class="song-name"></div>
+          <div class="song-author"></div>
+          </div>
+          <input style="height: 30%;background: #ffffff;" id="vol-control" type="range" value="100" min="0" max="100" step="1"
+          oninput="SetVolume(this.value)" onchange="SetVolume(this.value)">
         </div>
       </div>
     </div>
