--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="song-author"></div>
           </div>
           <input style="height: 30%;background: #ffffff;" id="vol-control" type="range" value="100" min="0" max="100" step="1"
-          oninput="SetVolume(this.value)" onchange="SetVolume(this.value)">
+          oninput="setVolume(this.value)" onchange="setVolume(this.value)">
         </div>
       </div>
     </div>
